# vrc-osc-chatbox

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  build.py  logging.yml  main.py  pyproject.toml  pyrightconfig.json  vrc-chatbox.spec
ui/: .env  .env.development  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/dicts/: Dockerfile  build.sh  luna_pinyin.custom.dict.yaml  luna_pinyin.custom.yaml
ui/public/: asr-worklet.js
ui/src/: App.vue  main.ts  util.ts
ui/src/api/: index.ts
ui/src/assets/: base.css  main.css
ui/src/router/: index.ts
ui/src/views/: ConfigPage.vue  ConnectPage.vue  TextInput.vue
vrcchatbox/: agent.py  asr_service.py  config.py  console.py  gui.py  handler.py  message.py  osc_client.py  server.py  tray.py
vrcchatbox/platform/: __init__.py
vrcchatbox/platform/_win32/: __init__.py
vrcchatbox/utils/: app_context.py  logger.py  netutil.py
