[project]
name = "vrc-osc-chatbox"
version = "0.1.0"
description = "A simple command line chatbox input interface for VRChat using OSC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-osc>=1.9.3",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "colorlog>=6.8.0",
    "ruamel.yaml>=0.18.0",
    "pyperclip>=1.11.0",
    "openai>=2.34.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "ifaddr>=0.2.0",
    "pywebview>=6.2.1",
    "doubaoime-asr",
]

[project.scripts]
vrc-chatbox = "main:main"

[tool.black]
line-length = 100

[tool.uv]
package = true

[tool.uv.sources]
doubaoime-asr = { path = "doubaoime-asr", editable = true }

[tool.setuptools]
py-modules = ["main"]
packages = ["vrcchatbox"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "pyright>=1.1.410",
]
build = [
    "pyinstaller>=6.0.0",
]
